[gd_scene load_steps=5 format=3 uid="uid://br42jee0jyht4"]

[ext_resource type="Script" uid="uid://x66xhyrwyy62" path="res://scripts/exit.gd" id="1_vx2ta"]
[ext_resource type="Texture2D" uid="uid://7hp05a372sm8" path="res://assets/exit_image.png" id="1_xkxvc"]
[ext_resource type="FontFile" uid="uid://bj0h4rfw7vukl" path="res://assets/fonts/PixelOperator8.ttf" id="3_l5n14"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyjhc"]
size = Vector2(20, 30)

[node name="exit" type="Area2D"]
collision_mask = 2
script = ExtResource("1_vx2ta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_oyjhc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, -8)
scale = Vector2(0.0292969, 0.0286458)
texture = ExtResource("1_xkxvc")

[node name="WinLabel" type="Label" parent="."]
offset_left = -56.0
offset_top = -56.0
offset_right = 50.0
offset_bottom = -33.0
theme_override_fonts/font = ExtResource("3_l5n14")
text = "You Win!"

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
